test/loop/confidence/errors/ifthen_errors_2.loop
# Errors in pattern matching functions

func() ->
  if true then x

